# docs

./: AUDIT_PHASE_6_3_ANALYSIS.json  AUDIT_PHASE_6_3_COMPLETE.json  AUDIT_PHASE_6_3_IMPLEMENTATION.json  AUDIT_PHASE_6_4_VALIDATION.json  CLEANUP_AND_ARCHIVAL_PLAN.md  CLEANUP_EXECUTION_REPORT.md  CUTOMER_DOCS.txt  FINAL_PROJECT_COMPLETION_SUMMARY.md  INTEGRATION_MAPPING_MATRIX.md  MINT_JSON_ENHANCEMENTS.md  OWNERS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  TASKSET_2_COMPLETION_REPORT.md  TASKSET_2_INTEGRATION_STRATEGY.md  TASKSET_3_BATCH_MIGRATION_FRAMEWORK.md  TASKSET_3_FINAL_SUMMARY.md  TASKSET_3_PHASE1_COMPLETION_REPORT.md  TASKSET_3_PHASE1_STATUS.md  TASKSET_4_PHASE2_BATCH_FRAMEWORK.md  TASKSET_4_PHASE2_COMPLETION_REPORT.md  TASKSET_5_PHASE3_BATCH_FRAMEWORK.md  TASKSET_5_PHASE3_COMPLETION_REPORT.md  TASKSET_6_CROSS_REFERENCE_FRAMEWORK.md  TASKSET_6_FINAL_SUMMARY.md  TASKSET_6_INDEX.md  TASKSET_6_LINKING_MATRIX.md  TASKSET_6_PHASE2_COMPLETION_REPORT.md  TASKSET_6_PHASE3_COMPLETION_REPORT.md  TASKSET_6_PHASE4_COMPLETION_REPORT.md  TASKSET_7_INDEX_NAVIGATION_OPTIMIZATION.md  architecture-overview.mdx  bidirectional_analysis.json  concepts.mdx  connection_matrix.json  development.mdx  docs.json  documentation-contract.mdx  index.mdx  introduction.mdx  (+3 more)
apps/rust-api/: Cargo.toml  Dockerfile
apps/rust-api/src/: main.rs
docs/: ARIA-AUDIT-ISSUES.md  CICD_TEMPLATES_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  MAINTENANCE_VERIFICATION.md  MINTLIFY-STRUCTURE.md  SDD-GITHUB-ORG-STRUCTURE.md  SDD_MIGRATION_MANIFEST.md  SRS-ISSUE-TEMPLATES-WORKFLOW-ORCHESTRATION.md  STUB_AUDIT.txt  (+8 more)
(+1000 files in other folders)
